Project3/y.output
Nonterminals useless in grammar

   ValLoop
   FormalParameterListLoopNoVal
   FormalParameterListLoopWithVal
   FormalParameterListNoType
   FormalParameterListWithType


Rules useless in grammar

  113 ValLoop: IDnum COMMAnum ValLoop
  114        | IDnum


Rules useless in parser due to conflicts

   15 MethodDeclLoop2: %empty


State 11 conflicts: 1 shift/reduce
State 13 conflicts: 2 shift/reduce
State 15 conflicts: 2 shift/reduce
State 16 conflicts: 1 shift/reduce, 1 reduce/reduce
State 17 conflicts: 1 shift/reduce, 1 reduce/reduce
State 41 conflicts: 2 reduce/reduce
State 77 conflicts: 2 shift/reduce
State 78 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program EOFnum

    1 Program: PROGRAMnum IDnum SEMInum ClassDeclLoop

    2 ClassDeclLoop: ClassDeclLoop ClassDecl
    3              | ClassDecl

    4 ClassDecl: CLASSnum IDnum ClassBody

    5 ClassBody: LBRACEnum Decls RBRACEnum
    6          | LBRACEnum RBRACEnum
    7          | LBRACEnum Decls MethodDeclLoop RBRACEnum

    8 Decls: DECLARATIONSnum DeclsLoop ENDDECLARATIONSnum
    9      | %empty

   10 DeclsLoop: %empty
   11          | DeclsLoop FieldDecl
   12          | FieldDecl

   13 MethodDeclLoop: MethodDeclLoop MethodDecl
   14               | MethodDeclLoop2

   15 MethodDeclLoop2: %empty
   16                | MethodDecl

   17 $@1: %empty

   18 MethodDecl: METHODnum VOIDnum $@1 IDnum LPARENnum FormalParameter_List RPARENnum Block
   19           | METHODnum Type IDnum LPARENnum FormalParameter_List RPARENnum Block

   20 FieldDecl: Type FieldDeclInner SEMInum

   21 FormalParameter_List: %empty
   22                     | FormalParameterListLoop

   23 FormalParameterListLoop: FormalParameter SEMInum FormalParameterListLoop
   24                        | FormalParameter

   25 $@2: %empty

   26 FormalParameter: INTnum $@2 FormalParameterLoop

   27 $@3: %empty

   28 FormalParameter: VALnum $@3 INTnum FormalParameterLoop

   29 FormalParameterLoop: IDnum
   30                    | IDnum COMMAnum FormalParameterLoop

   31 Type: INTnum BrackLoop
   32     | IDnum BrackLoop
   33     | INTnum TypeList
   34     | IDnum TypeList
   35     | IDnum TypeList DOTnum Type
   36     | INTnum TypeList DOTnum Type
   37     | IDnum
   38     | INTnum

   39 TypeList: LBRACnum RBRACnum
   40         | TypeList LBRACnum RBRACnum
   41         | %empty

   42 Block: StatementList
   43      | Decls StatementList

   44 StatementList: LBRACEnum StatementLoop RBRACEnum

   45 StatementLoop: Statement
   46              | StatementLoop SEMInum Statement

   47 Statement: %empty
   48          | AssignmentStatement
   49          | MethodCallStatement
   50          | ReturnStatement
   51          | IfStatement
   52          | WhileStatement

   53 FieldDeclInner: FieldDeclLoop2
   54               | FieldDeclInner COMMAnum FieldDeclLoop2

   55 FieldDeclLoop2: VariableDeclId
   56               | VariableDeclId EQUALnum VariableInitializer

   57 VariableDeclId: IDnum
   58               | IDnum BrackLoop

   59 BrackLoop: LBRACnum RBRACnum
   60          | BrackLoop LBRACnum RBRACnum

   61 VariableInitializer: Expression
   62                    | ArrayIntializer
   63                    | ArrayCreationExpression

   64 ArrayIntializer: LBRACEnum VariableInitializerLoop RBRACEnum

   65 VariableInitializerLoop: VariableInitializer
   66                        | VariableInitializerLoop COMMAnum VariableInitializer

   67 ArrayCreationExpression: INTnum ArrayCreationExpressionLoop

   68 ArrayCreationExpressionLoop: ArrayCreationExpressionLoop ArrayCreationExpressionLoop2
   69                            | ArrayCreationExpressionLoop2

   70 ArrayCreationExpressionLoop2: LBRACnum Expression RBRACnum

   71 AssignmentStatement: Variable ASSGNnum Expression

   72 MethodCallStatement: Variable LPARENnum ExpressionLoop RPARENnum

   73 ExpressionLoop: Expression
   74               | Expression COMMAnum ExpressionLoop
   75               | %empty

   76 Expression: SimpleExpression
   77           | SimpleExpression LTnum SimpleExpression
   78           | SimpleExpression LEnum SimpleExpression
   79           | SimpleExpression EQnum SimpleExpression
   80           | SimpleExpression NEnum SimpleExpression
   81           | SimpleExpression GTnum SimpleExpression
   82           | SimpleExpression GEnum SimpleExpression

   83 Factor: UnsignedConstant
   84       | Variable
   85       | MethodCallStatement
   86       | LPARENnum Expression RPARENnum
   87       | NOTnum Factor

   88 Term: Factor
   89     | Factor ANDnum Term
   90     | Factor DIVIDEnum Term
   91     | Factor TIMESnum Term

   92 UnsignedConstant: ICONSTnum
   93                 | SCONSTnum

   94 SimpleExpression: SimpleExpressionList
   95                 | PLUSnum SimpleExpressionList
   96                 | MINUSnum SimpleExpressionList

   97 SimpleExpressionList: Term
   98                     | SimpleExpressionList PLUSnum Term
   99                     | SimpleExpressionList MINUSnum Term
  100                     | SimpleExpressionList ORnum Term

  101 Variable: IDnum
  102         | IDnum VariableLoop

  103 VariableLoop: VariableLoop DOTnum IDnum
  104             | DOTnum IDnum
  105             | LBRACnum Expression ExpressionLoop RBRACnum
  106             | VariableLoop LBRACnum Expression ExpressionLoop RBRACnum

  107 ReturnStatement: RETURNnum
  108                | RETURNnum Expression

  109 IfStatement: IFnum Expression StatementList
  110            | IfStatement ELSEnum IFnum Expression StatementList
  111            | IfStatement ELSEnum StatementList

  112 WhileStatement: WHILEnum Expression StatementList


Terminals, with rules where they appear

EOFnum (0) 0
error (256)
DECLARATIONSnum (258) 8
ASSGNnum (259) 71
PROGRAMnum (260) 1
IDnum (261) 1 4 18 19 29 30 32 34 35 37 57 58 101 102 103 104
SEMInum (262) 1 20 23 46
ANDnum (263) 89
DOTnum (264) 35 36 103 104
ENDDECLARATIONSnum (265) 8
EQUALnum (266) 56
GTnum (267) 81
INTnum (268) 26 28 31 33 36 38 67
LBRACnum (269) 39 40 59 60 70 105 106
LPARENnum (270) 18 19 72 86
METHODnum (271) 18 19
NEnum (272) 80
ORnum (273) 100
RBRACnum (274) 39 40 59 60 70 105 106
RPARENnum (275) 18 19 72 86
VALnum (276) 28
WHILEnum (277) 112
CLASSnum (278) 4
COMMAnum (279) 30 54 66 74
DIVIDEnum (280) 90
ELSEnum (281) 110 111
EQnum (282) 79
GEnum (283) 82
ICONSTnum (284) 92
IFnum (285) 109 110
LBRACEnum (286) 5 6 7 44 64
LEnum (287) 78
LTnum (288) 77
MINUSnum (289) 96 99
NOTnum (290) 87
PLUSnum (291) 95 98
RBRACEnum (292) 5 6 7 44 64
RETURNnum (293) 107 108
SCONSTnum (294) 93
TIMESnum (295) 91
VOIDnum (296) 18


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
ClassDeclLoop (44)
    on left: 2 3, on right: 1 2
ClassDecl (45)
    on left: 4, on right: 2 3
ClassBody (46)
    on left: 5 6 7, on right: 4
Decls (47)
    on left: 8 9, on right: 5 7 43
DeclsLoop (48)
    on left: 10 11 12, on right: 8 11
MethodDeclLoop (49)
    on left: 13 14, on right: 7 13
MethodDeclLoop2 (50)
    on left: 15 16, on right: 14
MethodDecl (51)
    on left: 18 19, on right: 13 16
$@1 (52)
    on left: 17, on right: 18
FieldDecl (53)
    on left: 20, on right: 11 12
FormalParameter_List (54)
    on left: 21 22, on right: 18 19
FormalParameterListLoop (55)
    on left: 23 24, on right: 22 23
FormalParameter (56)
    on left: 26 28, on right: 23 24
$@2 (57)
    on left: 25, on right: 26
$@3 (58)
    on left: 27, on right: 28
FormalParameterLoop (59)
    on left: 29 30, on right: 26 28 30
Type (60)
    on left: 31 32 33 34 35 36 37 38, on right: 19 20 35 36
TypeList (61)
    on left: 39 40 41, on right: 33 34 35 36 40
Block (62)
    on left: 42 43, on right: 18 19
StatementList (63)
    on left: 44, on right: 42 43 109 110 111 112
StatementLoop (64)
    on left: 45 46, on right: 44 46
Statement (65)
    on left: 47 48 49 50 51 52, on right: 45 46
FieldDeclInner (66)
    on left: 53 54, on right: 20 54
FieldDeclLoop2 (67)
    on left: 55 56, on right: 53 54
VariableDeclId (68)
    on left: 57 58, on right: 55 56
BrackLoop (69)
    on left: 59 60, on right: 31 32 58 60
VariableInitializer (70)
    on left: 61 62 63, on right: 56 65 66
ArrayIntializer (71)
    on left: 64, on right: 62
VariableInitializerLoop (72)
    on left: 65 66, on right: 64 66
ArrayCreationExpression (73)
    on left: 67, on right: 63
ArrayCreationExpressionLoop (74)
    on left: 68 69, on right: 67 68
ArrayCreationExpressionLoop2 (75)
    on left: 70, on right: 68 69
AssignmentStatement (76)
    on left: 71, on right: 48
MethodCallStatement (77)
    on left: 72, on right: 49 85
ExpressionLoop (78)
    on left: 73 74 75, on right: 72 74 105 106
Expression (79)
    on left: 76 77 78 79 80 81 82, on right: 61 70 71 73 74 86 105
    106 108 109 110 112
Factor (80)
    on left: 83 84 85 86 87, on right: 87 88 89 90 91
Term (81)
    on left: 88 89 90 91, on right: 89 90 91 97 98 99 100
UnsignedConstant (82)
    on left: 92 93, on right: 83
SimpleExpression (83)
    on left: 94 95 96, on right: 76 77 78 79 80 81 82
SimpleExpressionList (84)
    on left: 97 98 99 100, on right: 94 95 96 98 99 100
Variable (85)
    on left: 101 102, on right: 71 72 84
VariableLoop (86)
    on left: 103 104 105 106, on right: 102 103 106
ReturnStatement (87)
    on left: 107 108, on right: 50
IfStatement (88)
    on left: 109 110 111, on right: 51 110 111
WhileStatement (89)
    on left: 112, on right: 52


State 0

    0 $accept: . Program EOFnum

    PROGRAMnum  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: PROGRAMnum . IDnum SEMInum ClassDeclLoop

    IDnum  shift, and go to state 3


State 2

    0 $accept: Program . EOFnum

    EOFnum  shift, and go to state 4


State 3

    1 Program: PROGRAMnum IDnum . SEMInum ClassDeclLoop

    SEMInum  shift, and go to state 5


State 4

    0 $accept: Program EOFnum .

    $default  accept


State 5

    1 Program: PROGRAMnum IDnum SEMInum . ClassDeclLoop

    CLASSnum  shift, and go to state 6

    ClassDeclLoop  go to state 7
    ClassDecl      go to state 8


State 6

    4 ClassDecl: CLASSnum . IDnum ClassBody

    IDnum  shift, and go to state 9


State 7

    1 Program: PROGRAMnum IDnum SEMInum ClassDeclLoop .
    2 ClassDeclLoop: ClassDeclLoop . ClassDecl

    CLASSnum  shift, and go to state 6

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 10


State 8

    3 ClassDeclLoop: ClassDecl .

    $default  reduce using rule 3 (ClassDeclLoop)


State 9

    4 ClassDecl: CLASSnum IDnum . ClassBody

    LBRACEnum  shift, and go to state 11

    ClassBody  go to state 12


State 10

    2 ClassDeclLoop: ClassDeclLoop ClassDecl .

    $default  reduce using rule 2 (ClassDeclLoop)


State 11

    5 ClassBody: LBRACEnum . Decls RBRACEnum
    6          | LBRACEnum . RBRACEnum
    7          | LBRACEnum . Decls MethodDeclLoop RBRACEnum

    DECLARATIONSnum  shift, and go to state 13
    RBRACEnum        shift, and go to state 14

    RBRACEnum  [reduce using rule 9 (Decls)]
    $default   reduce using rule 9 (Decls)

    Decls  go to state 15


State 12

    4 ClassDecl: CLASSnum IDnum ClassBody .

    $default  reduce using rule 4 (ClassDecl)


State 13

    8 Decls: DECLARATIONSnum . DeclsLoop ENDDECLARATIONSnum

    IDnum   shift, and go to state 16
    INTnum  shift, and go to state 17

    IDnum     [reduce using rule 10 (DeclsLoop)]
    INTnum    [reduce using rule 10 (DeclsLoop)]
    $default  reduce using rule 10 (DeclsLoop)

    DeclsLoop  go to state 18
    FieldDecl  go to state 19
    Type       go to state 20


State 14

    6 ClassBody: LBRACEnum RBRACEnum .

    $default  reduce using rule 6 (ClassBody)


State 15

    5 ClassBody: LBRACEnum Decls . RBRACEnum
    7          | LBRACEnum Decls . MethodDeclLoop RBRACEnum

    METHODnum  shift, and go to state 21
    RBRACEnum  shift, and go to state 22

    METHODnum  [reduce using rule 15 (MethodDeclLoop2)]
    RBRACEnum  [reduce using rule 15 (MethodDeclLoop2)]

    MethodDeclLoop   go to state 23
    MethodDeclLoop2  go to state 24
    MethodDecl       go to state 25


State 16

   32 Type: IDnum . BrackLoop
   34     | IDnum . TypeList
   35     | IDnum . TypeList DOTnum Type
   37     | IDnum .

    LBRACnum  shift, and go to state 26

    IDnum     reduce using rule 37 (Type)
    IDnum     [reduce using rule 41 (TypeList)]
    DOTnum    reduce using rule 41 (TypeList)
    LBRACnum  [reduce using rule 41 (TypeList)]
    $default  reduce using rule 37 (Type)

    TypeList   go to state 27
    BrackLoop  go to state 28


State 17

   31 Type: INTnum . BrackLoop
   33     | INTnum . TypeList
   36     | INTnum . TypeList DOTnum Type
   38     | INTnum .

    LBRACnum  shift, and go to state 26

    IDnum     reduce using rule 38 (Type)
    IDnum     [reduce using rule 41 (TypeList)]
    DOTnum    reduce using rule 41 (TypeList)
    LBRACnum  [reduce using rule 41 (TypeList)]
    $default  reduce using rule 38 (Type)

    TypeList   go to state 29
    BrackLoop  go to state 30


State 18

    8 Decls: DECLARATIONSnum DeclsLoop . ENDDECLARATIONSnum
   11 DeclsLoop: DeclsLoop . FieldDecl

    IDnum               shift, and go to state 16
    ENDDECLARATIONSnum  shift, and go to state 31
    INTnum              shift, and go to state 17

    FieldDecl  go to state 32
    Type       go to state 20


State 19

   12 DeclsLoop: FieldDecl .

    $default  reduce using rule 12 (DeclsLoop)


State 20

   20 FieldDecl: Type . FieldDeclInner SEMInum

    IDnum  shift, and go to state 33

    FieldDeclInner  go to state 34
    FieldDeclLoop2  go to state 35
    VariableDeclId  go to state 36


State 21

   18 MethodDecl: METHODnum . VOIDnum $@1 IDnum LPARENnum FormalParameter_List RPARENnum Block
   19           | METHODnum . Type IDnum LPARENnum FormalParameter_List RPARENnum Block

    IDnum    shift, and go to state 16
    INTnum   shift, and go to state 17
    VOIDnum  shift, and go to state 37

    Type  go to state 38


State 22

    5 ClassBody: LBRACEnum Decls RBRACEnum .

    $default  reduce using rule 5 (ClassBody)


State 23

    7 ClassBody: LBRACEnum Decls MethodDeclLoop . RBRACEnum
   13 MethodDeclLoop: MethodDeclLoop . MethodDecl

    METHODnum  shift, and go to state 21
    RBRACEnum  shift, and go to state 39

    MethodDecl  go to state 40


State 24

   14 MethodDeclLoop: MethodDeclLoop2 .

    $default  reduce using rule 14 (MethodDeclLoop)


State 25

   16 MethodDeclLoop2: MethodDecl .

    $default  reduce using rule 16 (MethodDeclLoop2)


State 26

   39 TypeList: LBRACnum . RBRACnum
   59 BrackLoop: LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 41


State 27

   34 Type: IDnum TypeList .
   35     | IDnum TypeList . DOTnum Type
   40 TypeList: TypeList . LBRACnum RBRACnum

    DOTnum    shift, and go to state 42
    LBRACnum  shift, and go to state 43

    $default  reduce using rule 34 (Type)


State 28

   32 Type: IDnum BrackLoop .
   60 BrackLoop: BrackLoop . LBRACnum RBRACnum

    LBRACnum  shift, and go to state 44

    $default  reduce using rule 32 (Type)


State 29

   33 Type: INTnum TypeList .
   36     | INTnum TypeList . DOTnum Type
   40 TypeList: TypeList . LBRACnum RBRACnum

    DOTnum    shift, and go to state 45
    LBRACnum  shift, and go to state 43

    $default  reduce using rule 33 (Type)


State 30

   31 Type: INTnum BrackLoop .
   60 BrackLoop: BrackLoop . LBRACnum RBRACnum

    LBRACnum  shift, and go to state 44

    $default  reduce using rule 31 (Type)


State 31

    8 Decls: DECLARATIONSnum DeclsLoop ENDDECLARATIONSnum .

    $default  reduce using rule 8 (Decls)


State 32

   11 DeclsLoop: DeclsLoop FieldDecl .

    $default  reduce using rule 11 (DeclsLoop)


State 33

   57 VariableDeclId: IDnum .
   58               | IDnum . BrackLoop

    LBRACnum  shift, and go to state 46

    $default  reduce using rule 57 (VariableDeclId)

    BrackLoop  go to state 47


State 34

   20 FieldDecl: Type FieldDeclInner . SEMInum
   54 FieldDeclInner: FieldDeclInner . COMMAnum FieldDeclLoop2

    SEMInum   shift, and go to state 48
    COMMAnum  shift, and go to state 49


State 35

   53 FieldDeclInner: FieldDeclLoop2 .

    $default  reduce using rule 53 (FieldDeclInner)


State 36

   55 FieldDeclLoop2: VariableDeclId .
   56               | VariableDeclId . EQUALnum VariableInitializer

    EQUALnum  shift, and go to state 50

    $default  reduce using rule 55 (FieldDeclLoop2)


State 37

   18 MethodDecl: METHODnum VOIDnum . $@1 IDnum LPARENnum FormalParameter_List RPARENnum Block

    $default  reduce using rule 17 ($@1)

    $@1  go to state 51


State 38

   19 MethodDecl: METHODnum Type . IDnum LPARENnum FormalParameter_List RPARENnum Block

    IDnum  shift, and go to state 52


State 39

    7 ClassBody: LBRACEnum Decls MethodDeclLoop RBRACEnum .

    $default  reduce using rule 7 (ClassBody)


State 40

   13 MethodDeclLoop: MethodDeclLoop MethodDecl .

    $default  reduce using rule 13 (MethodDeclLoop)


State 41

   39 TypeList: LBRACnum RBRACnum .
   59 BrackLoop: LBRACnum RBRACnum .

    IDnum     reduce using rule 39 (TypeList)
    IDnum     [reduce using rule 59 (BrackLoop)]
    LBRACnum  reduce using rule 39 (TypeList)
    LBRACnum  [reduce using rule 59 (BrackLoop)]
    $default  reduce using rule 39 (TypeList)


State 42

   35 Type: IDnum TypeList DOTnum . Type

    IDnum   shift, and go to state 16
    INTnum  shift, and go to state 17

    Type  go to state 53


State 43

   40 TypeList: TypeList LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 54


State 44

   60 BrackLoop: BrackLoop LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 55


State 45

   36 Type: INTnum TypeList DOTnum . Type

    IDnum   shift, and go to state 16
    INTnum  shift, and go to state 17

    Type  go to state 56


State 46

   59 BrackLoop: LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 57


State 47

   58 VariableDeclId: IDnum BrackLoop .
   60 BrackLoop: BrackLoop . LBRACnum RBRACnum

    LBRACnum  shift, and go to state 44

    $default  reduce using rule 58 (VariableDeclId)


State 48

   20 FieldDecl: Type FieldDeclInner SEMInum .

    $default  reduce using rule 20 (FieldDecl)


State 49

   54 FieldDeclInner: FieldDeclInner COMMAnum . FieldDeclLoop2

    IDnum  shift, and go to state 33

    FieldDeclLoop2  go to state 58
    VariableDeclId  go to state 36


State 50

   56 FieldDeclLoop2: VariableDeclId EQUALnum . VariableInitializer

    IDnum      shift, and go to state 59
    INTnum     shift, and go to state 60
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    LBRACEnum  shift, and go to state 63
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    PLUSnum    shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    VariableInitializer      go to state 68
    ArrayIntializer          go to state 69
    ArrayCreationExpression  go to state 70
    MethodCallStatement      go to state 71
    Expression               go to state 72
    Factor                   go to state 73
    Term                     go to state 74
    UnsignedConstant         go to state 75
    SimpleExpression         go to state 76
    SimpleExpressionList     go to state 77
    Variable                 go to state 78


State 51

   18 MethodDecl: METHODnum VOIDnum $@1 . IDnum LPARENnum FormalParameter_List RPARENnum Block

    IDnum  shift, and go to state 79


State 52

   19 MethodDecl: METHODnum Type IDnum . LPARENnum FormalParameter_List RPARENnum Block

    LPARENnum  shift, and go to state 80


State 53

   35 Type: IDnum TypeList DOTnum Type .

    $default  reduce using rule 35 (Type)


State 54

   40 TypeList: TypeList LBRACnum RBRACnum .

    $default  reduce using rule 40 (TypeList)


State 55

   60 BrackLoop: BrackLoop LBRACnum RBRACnum .

    $default  reduce using rule 60 (BrackLoop)


State 56

   36 Type: INTnum TypeList DOTnum Type .

    $default  reduce using rule 36 (Type)


State 57

   59 BrackLoop: LBRACnum RBRACnum .

    $default  reduce using rule 59 (BrackLoop)


State 58

   54 FieldDeclInner: FieldDeclInner COMMAnum FieldDeclLoop2 .

    $default  reduce using rule 54 (FieldDeclInner)


State 59

  101 Variable: IDnum .
  102         | IDnum . VariableLoop

    DOTnum    shift, and go to state 81
    LBRACnum  shift, and go to state 82

    $default  reduce using rule 101 (Variable)

    VariableLoop  go to state 83


State 60

   67 ArrayCreationExpression: INTnum . ArrayCreationExpressionLoop

    LBRACnum  shift, and go to state 84

    ArrayCreationExpressionLoop   go to state 85
    ArrayCreationExpressionLoop2  go to state 86


State 61

   86 Factor: LPARENnum . Expression RPARENnum

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    PLUSnum    shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement   go to state 71
    Expression            go to state 87
    Factor                go to state 73
    Term                  go to state 74
    UnsignedConstant      go to state 75
    SimpleExpression      go to state 76
    SimpleExpressionList  go to state 77
    Variable              go to state 78


State 62

   92 UnsignedConstant: ICONSTnum .

    $default  reduce using rule 92 (UnsignedConstant)


State 63

   64 ArrayIntializer: LBRACEnum . VariableInitializerLoop RBRACEnum

    IDnum      shift, and go to state 59
    INTnum     shift, and go to state 60
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    LBRACEnum  shift, and go to state 63
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    PLUSnum    shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    VariableInitializer      go to state 88
    ArrayIntializer          go to state 69
    VariableInitializerLoop  go to state 89
    ArrayCreationExpression  go to state 70
    MethodCallStatement      go to state 71
    Expression               go to state 72
    Factor                   go to state 73
    Term                     go to state 74
    UnsignedConstant         go to state 75
    SimpleExpression         go to state 76
    SimpleExpressionList     go to state 77
    Variable                 go to state 78


State 64

   96 SimpleExpression: MINUSnum . SimpleExpressionList

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    NOTnum     shift, and go to state 65
    SCONSTnum  shift, and go to state 67

    MethodCallStatement   go to state 71
    Factor                go to state 73
    Term                  go to state 74
    UnsignedConstant      go to state 75
    SimpleExpressionList  go to state 90
    Variable              go to state 78


State 65

   87 Factor: NOTnum . Factor

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    NOTnum     shift, and go to state 65
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Factor               go to state 91
    UnsignedConstant     go to state 75
    Variable             go to state 78


State 66

   95 SimpleExpression: PLUSnum . SimpleExpressionList

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    NOTnum     shift, and go to state 65
    SCONSTnum  shift, and go to state 67

    MethodCallStatement   go to state 71
    Factor                go to state 73
    Term                  go to state 74
    UnsignedConstant      go to state 75
    SimpleExpressionList  go to state 92
    Variable              go to state 78


State 67

   93 UnsignedConstant: SCONSTnum .

    $default  reduce using rule 93 (UnsignedConstant)


State 68

   56 FieldDeclLoop2: VariableDeclId EQUALnum VariableInitializer .

    $default  reduce using rule 56 (FieldDeclLoop2)


State 69

   62 VariableInitializer: ArrayIntializer .

    $default  reduce using rule 62 (VariableInitializer)


State 70

   63 VariableInitializer: ArrayCreationExpression .

    $default  reduce using rule 63 (VariableInitializer)


State 71

   85 Factor: MethodCallStatement .

    $default  reduce using rule 85 (Factor)


State 72

   61 VariableInitializer: Expression .

    $default  reduce using rule 61 (VariableInitializer)


State 73

   88 Term: Factor .
   89     | Factor . ANDnum Term
   90     | Factor . DIVIDEnum Term
   91     | Factor . TIMESnum Term

    ANDnum     shift, and go to state 93
    DIVIDEnum  shift, and go to state 94
    TIMESnum   shift, and go to state 95

    $default  reduce using rule 88 (Term)


State 74

   97 SimpleExpressionList: Term .

    $default  reduce using rule 97 (SimpleExpressionList)


State 75

   83 Factor: UnsignedConstant .

    $default  reduce using rule 83 (Factor)


State 76

   76 Expression: SimpleExpression .
   77           | SimpleExpression . LTnum SimpleExpression
   78           | SimpleExpression . LEnum SimpleExpression
   79           | SimpleExpression . EQnum SimpleExpression
   80           | SimpleExpression . NEnum SimpleExpression
   81           | SimpleExpression . GTnum SimpleExpression
   82           | SimpleExpression . GEnum SimpleExpression

    GTnum  shift, and go to state 96
    NEnum  shift, and go to state 97
    EQnum  shift, and go to state 98
    GEnum  shift, and go to state 99
    LEnum  shift, and go to state 100
    LTnum  shift, and go to state 101

    $default  reduce using rule 76 (Expression)


State 77

   94 SimpleExpression: SimpleExpressionList .
   98 SimpleExpressionList: SimpleExpressionList . PLUSnum Term
   99                     | SimpleExpressionList . MINUSnum Term
  100                     | SimpleExpressionList . ORnum Term

    ORnum     shift, and go to state 102
    MINUSnum  shift, and go to state 103
    PLUSnum   shift, and go to state 104

    MINUSnum  [reduce using rule 94 (SimpleExpression)]
    PLUSnum   [reduce using rule 94 (SimpleExpression)]
    $default  reduce using rule 94 (SimpleExpression)


State 78

   72 MethodCallStatement: Variable . LPARENnum ExpressionLoop RPARENnum
   84 Factor: Variable .

    LPARENnum  shift, and go to state 105

    LPARENnum  [reduce using rule 84 (Factor)]
    $default   reduce using rule 84 (Factor)


State 79

   18 MethodDecl: METHODnum VOIDnum $@1 IDnum . LPARENnum FormalParameter_List RPARENnum Block

    LPARENnum  shift, and go to state 106


State 80

   19 MethodDecl: METHODnum Type IDnum LPARENnum . FormalParameter_List RPARENnum Block

    INTnum  shift, and go to state 107
    VALnum  shift, and go to state 108

    $default  reduce using rule 21 (FormalParameter_List)

    FormalParameter_List     go to state 109
    FormalParameterListLoop  go to state 110
    FormalParameter          go to state 111


State 81

  104 VariableLoop: DOTnum . IDnum

    IDnum  shift, and go to state 112


State 82

  105 VariableLoop: LBRACnum . Expression ExpressionLoop RBRACnum

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    PLUSnum    shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement   go to state 71
    Expression            go to state 113
    Factor                go to state 73
    Term                  go to state 74
    UnsignedConstant      go to state 75
    SimpleExpression      go to state 76
    SimpleExpressionList  go to state 77
    Variable              go to state 78


State 83

  102 Variable: IDnum VariableLoop .
  103 VariableLoop: VariableLoop . DOTnum IDnum
  106             | VariableLoop . LBRACnum Expression ExpressionLoop RBRACnum

    DOTnum    shift, and go to state 114
    LBRACnum  shift, and go to state 115

    $default  reduce using rule 102 (Variable)


State 84

   70 ArrayCreationExpressionLoop2: LBRACnum . Expression RBRACnum

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    PLUSnum    shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement   go to state 71
    Expression            go to state 116
    Factor                go to state 73
    Term                  go to state 74
    UnsignedConstant      go to state 75
    SimpleExpression      go to state 76
    SimpleExpressionList  go to state 77
    Variable              go to state 78


State 85

   67 ArrayCreationExpression: INTnum ArrayCreationExpressionLoop .
   68 ArrayCreationExpressionLoop: ArrayCreationExpressionLoop . ArrayCreationExpressionLoop2

    LBRACnum  shift, and go to state 84

    $default  reduce using rule 67 (ArrayCreationExpression)

    ArrayCreationExpressionLoop2  go to state 117


State 86

   69 ArrayCreationExpressionLoop: ArrayCreationExpressionLoop2 .

    $default  reduce using rule 69 (ArrayCreationExpressionLoop)


State 87

   86 Factor: LPARENnum Expression . RPARENnum

    RPARENnum  shift, and go to state 118


State 88

   65 VariableInitializerLoop: VariableInitializer .

    $default  reduce using rule 65 (VariableInitializerLoop)


State 89

   64 ArrayIntializer: LBRACEnum VariableInitializerLoop . RBRACEnum
   66 VariableInitializerLoop: VariableInitializerLoop . COMMAnum VariableInitializer

    COMMAnum   shift, and go to state 119
    RBRACEnum  shift, and go to state 120


State 90

   96 SimpleExpression: MINUSnum SimpleExpressionList .
   98 SimpleExpressionList: SimpleExpressionList . PLUSnum Term
   99                     | SimpleExpressionList . MINUSnum Term
  100                     | SimpleExpressionList . ORnum Term

    ORnum  shift, and go to state 102

    $default  reduce using rule 96 (SimpleExpression)


State 91

   87 Factor: NOTnum Factor .

    $default  reduce using rule 87 (Factor)


State 92

   95 SimpleExpression: PLUSnum SimpleExpressionList .
   98 SimpleExpressionList: SimpleExpressionList . PLUSnum Term
   99                     | SimpleExpressionList . MINUSnum Term
  100                     | SimpleExpressionList . ORnum Term

    ORnum  shift, and go to state 102

    $default  reduce using rule 95 (SimpleExpression)


State 93

   89 Term: Factor ANDnum . Term

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    NOTnum     shift, and go to state 65
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Factor               go to state 73
    Term                 go to state 121
    UnsignedConstant     go to state 75
    Variable             go to state 78


State 94

   90 Term: Factor DIVIDEnum . Term

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    NOTnum     shift, and go to state 65
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Factor               go to state 73
    Term                 go to state 122
    UnsignedConstant     go to state 75
    Variable             go to state 78


State 95

   91 Term: Factor TIMESnum . Term

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    NOTnum     shift, and go to state 65
    SCONSTnum  shift, and go to state 67
